syntax = "proto3";
package android_manager;

option java_package = "com.defyun.pb";
option java_outer_classname = "AndroidManagerProtocol";
//import "google/protobuf/timestamp.proto";

service AndroidManager {
  rpc HookListModules(HookListModulesReq) returns (HookListModulesResp);
  rpc HookListSymbols(HookListSymbolsReq) returns (HookListSymbolsResp);
  rpc HookInfoAdd(HookInfoAddReq) returns (HookInfoAddResp);
  rpc HookInfoList(HookInfoListReq) returns (HookInfoListResp);
  rpc HookServerExit(HookServerExitReq) returns (HookServerExitResp);
  rpc HookDumpMemRange(HookDumpMemRangeReq) returns (HookDumpMemRangeResp);
}



message HookListModulesReq {
  string pkg_name = 1;
}
message ModuleInfo {
  string name = 1;
  string path = 2;
  uint64 base_addr = 3;
  uint64 size = 4;
}

message HookListModulesResp {
  repeated ModuleInfo modules = 1;
}

message HookListSymbolsReq {
  string module_name = 1;
}


message HookSymbolInfo {
  string module_name = 1;
  string symbol_name = 2;
  uint64 address = 3;
  uint64 size = 4;
}

message HookListSymbolsResp {
  repeated HookSymbolInfo symbols = 1;
}

message HookArg {
  int32 arg_index = 1;
  string arg_Name = 2;
  string arg_type = 3;
  bool hooked = 4;
}
message HookInfo {
  string module_name = 1;
  string symbol_name = 2;
  repeated HookArg args = 3;
}

message HookInfoAddReq {
  HookInfo info = 1;
}

message HookInfoAddResp {
  int32  status = 1;
}

message HookInfoListReq {
}

message HookInfoListResp {
  repeated HookInfo hooks =1;
}

message HookServerExitReq {
  string newPkgName = 1;
}

message HookServerExitResp {
  string result = 1;
}

message HookDumpMemRangeReq {
  uint64 start = 1;
  uint64 end  = 2;
  string name = 3;
}
message HookDumpMemRangeResp {
  int32 status = 1;
  string dumpFileOnDevice = 2;
}
